--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -21,9 +21,12 @@
     color: var(--primary);
 }
 .hero h4{
+    
     color: #737373;
 }
-
+/* .hero-left p{
+    max-width: max(70vw);
+} */
 .hero-links {
     display: flex;
     gap: 10px;
@@ -46,7 +49,7 @@
 
 
 .hero-right{
-    width: max(300px,);
+    width: max(300px,38vw);
 }
 .hero-right .container{
     width:100%;
@@ -62,5 +65,6 @@
     .hero{
         flex-direction: column-reverse;
         row-gap: 6vh;
+        padding: 20px 9% 0 9%;
     }
 }
