--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -116,4 +116,10 @@
     gap:30px ;
     padding: 112px 85px;
   }
+  .portfolio--section--card{
+    gap: 10px;
+  }
+  .portfolio--section--card--content{
+    padding: 10px 18px;
+  }
 }
