--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -56,6 +56,17 @@
     cursor: pointer;
     transition: .3s;
 }
+.menu{
+    display: none;
+}
+@keyframes slidein {
+    0%{
+        left: -100vw;
+    }
+    100%{
+        left: 0;
+    }
+}
 
 @media (max-width:900px){
     .navbar{
@@ -64,8 +75,34 @@
     .nav-links{
         display: none;
     }
+    .mobile-nav{
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100vh;
+        width: 100vw;
+        padding: 40px;
+        font-size: 16px;
+        font-weight: 500;
+        row-gap: 30px;
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(255, 255, 255);
+        animation: slidein .5s ease-in-out ;
+    }
+    .close{
+        position: absolute;
+        right: 30px;
+        top: 30px;
+        font-weight: 600;
+    }
     .nav-right{
         justify-content: flex-end;
+    }
+    .menu{
+        display: block;
+        width:25px;
+        margin-left: 10px;
     }
     .navbar button{
         background-color: var(--primary);
