--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -36,7 +36,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-   
+    justify-content: space-between;
+    min-height: 470px;
     gap: 12px;
     flex: 1 0 0;
     background: #fff;
