--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -12,8 +12,8 @@
     padding-inline: 20px;
     width: 100%;
     background:white;
-    box-shadow: 2px 2px 4px #00000028,
-    0px 0px 4px #00000041;
+    box-shadow: 2px 2px 24px #00000011,
+    0px 0px 24px #00000018;
     border-radius: 8px;
 }
 .about-info p{
@@ -33,6 +33,7 @@
 /* ----- ABOUT / SKILLS BOX ----- */
 .skills-box{
     margin: 10px;
+    
 }
 .skills-header{
     margin-bottom: 30px;
@@ -41,7 +42,15 @@
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+    
 }
+.skill-container{
+    box-shadow: 2px 2px 24px #00000011,
+    0px 0px 24px #00000018;
+    border-radius: 8px;
+    padding:  30px ;
+}
+
 .skills-list span{
     font-size: 14px;
     border: 1px solid var(--primary);
@@ -49,12 +58,12 @@
     padding: 2px 10px;
     border-radius: 5px;
 }
-
 @media (max-width:920px){
     .about-container, .skill-container{
         flex-direction: column;
     }
     .skill-container{
         gap: 0px;
+        
     }
 }
