--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,6 +1,6 @@
 .contact{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 20px;
 }
@@ -8,6 +8,7 @@
     flex: 1;
     display: flex;
     height: 300px;
+    align-items: center;
     flex-direction: column;
     justify-content: space-between;
     gap: 30px;
@@ -21,6 +22,7 @@
 .contact-links li{
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 10px;
 }
 .contact-links img{
