--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,5 +1,6 @@
-
+/* 
 /* My Portfolio Starts */
+/*
 .portfolio--section {
     display: flex;
     flex-direction: column;
@@ -123,5 +124,113 @@
   }
   .portfolio--section--card--content{
     padding: 10px 18px;
+  }
+} */
+
+.portfolio-container-box{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.portfolio-section-container{
+  width: 100%;
+
+  display: grid;
+  grid-template-columns:repeat(3,1fr);
+  gap: 30px;
+  margin-top: 30px;
+  
+}
+.portfolio-section-card{
+  position: relative;
+  width: 100%;
+  background:white;
+  box-shadow: 2px 2px 24px #00000011,
+  0px 0px 24px #00000018;
+  border-radius: 8px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  overflow: hidden;
+}
+.portfolio-section-card:hover .link{
+  display:flex;
+}
+.portfolio-section-img{
+  width: 100%;
+ 
+  margin-bottom: 30px;
+}
+.portfolio-section-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.portfolio-section-card-content{
+ 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  font-size:16px ;
+  margin-bottom: 20px;
+}
+.portfolio-section-card .link{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  backdrop-filter: blur(1px);
+  background-color: rgba(255, 255, 255, 0.366);
+  z-index: 10;
+ 
+  
+  animation: rotate 1s ;
+}
+
+.portfolio-section-card .link p{
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+.text-md{
+  margin-top: 10px;
+  color: rgba(0, 0, 0, 0.778);
+}
+@keyframes rotate {
+  0%{
+    left: -100px;
+    top: -100px;
+    scale: 1.2;
+  }
+  50%{
+    top: 10px;
+    left: 10px;
+  }
+  70%{
+    scale: 1;
+    top: 0;
+    left: 0;
+  }
+ 
+}
+
+@media (max-width:1000px) {
+  .portfolio-section-title{
+    font-size: 17px;
+  }
+}
+@media (max-width:900px){
+  .portfolio-section-container{
+    grid-template-columns: 1fr;
   }
 }
