--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -35,16 +35,14 @@
     text-decoration: none;
   }
   .divider {
-    margin: 106px 0 42.67px;
+    margin: 30px 0 42.67px;
     height: 1.333px;
     width: 100%;
     background: rgba(40, 41, 56, 0.55);
   }
   .footer--content--container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-self: stretch;
+    text-align: center;
+    margin-bottom: 20px;
   }
   .footer--content {
     color: var(--black);
